--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-toastify": "^5.5.0"
   },
   "scripts": {
     "start": "set NODE_ENV=production && NODE_ENV=production react-scripts start",
