--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-loader-spinner": "^3.1.14",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-toastify": "^5.5.0"
+    "react-toastify": "^5.5.0",
+    "reactjs-popup": "^1.5.0"
   },
   "scripts": {
     "start": "set NODE_ENV=production && NODE_ENV=production react-scripts start",
